##################################################
 Revision history for Log::Log4perl
##################################################

1.21 (not yet released)
    *   (ms) Documentation typos fixed, reported by Breno G. de Oliveira
             [rt.cpan.org #42428].

1.20 (2008/12/09)
    *   (ms) Using semctl to reset the value of the semaphore in the 
             Synchronized appender to prevent "Numerical result out of 
             range" problem caused by an unbalanced SEM_UNDO when
             incrementing it. Reported by John Little.
    *   (ms) Added parameters in curly braces to cspecs in PatternLayout.
    *   (ms) As explained in  http://rt.cpan.org/Ticket/Display.html?id=41505
             the latest LWP release (5.822) got rid of all of its internal
             debugging functions, making infiltrate_lwp() and its test
             case useless. Disabling it for LWP>=5.822.
 
1.19 (2008/10/22)
    *   (ms) Applied patch by Peter Rabbitson, which fixes the caller() 
             level when calling get_logger() on a subclass of Log4perl.
    *   (ms) Added documentation on is_xxx() methods and clarified that
             it doesn't necessarily mean that a message gets logged if
             they're returning true (requested by Conway Allen via 
             [rt.cpan.org #39085].
    *   (ms) Applied patch by Lee Johnson to appender_by_name() to allow
             for undefined appender names without issuing a warning,
             which was occurring with Catalyst::Log4perl.
    *   (ms) Added docs on numerical levels and level strings in 
             Log::Log4perl::Level.
    *   (ms) Applied patch by Anthony Foiani for support of literal 
             text in DateFormat format strings.

1.18 (2008/08/23)
    *   (ms) Added explanation that categories and loggers are the same
             thing (thanks to Rabbit).
    *   (ms) Fixed t/053Resurrect to work with 5.005_03
    *   (ms) Added preinit_callback function for init_and_watch()